= 3.32.0 (2020-05-15)

* Make :dependencies option in assets plugin work correctly with render plugin template caching (jeremyevans) (#191)

* Support render method :dependencies option for specifying which files to check for modification (jgarth, jeremyevans) (#192)

* Add each_partial to the partials plugin for rendering a partial for each element in an enumerable (jeremyevans)

* Make render_each in render_each plugin handle template names with directories and extensions (jeremyevans)

= 3.31.0 (2020-04-15)

* Add :relative option to path method in path plugin, for generating a method returning relative paths (jeremyevans)

* Add relative_path plugin, for turning absolute paths to paths relative to the current request (jeremyevans)

= 3.30.0 (2020-03-13)

* Support :relative_paths assets plugin option to use relative paths for the assets (jeremyevans)

* Make run_append_slash and run_handler plugins work when used together (janko) (#185)

* Make :header matcher in header_matchers plugin work for Content-Type and Content-Length (jeremyevans) (#184)

= 3.29.0 (2020-02-14)

* Remove specs and old release notes from the gem to reduce gem size by over 35% (jeremyevans)

* Raise RodaError if trying to load a plugin that is not a module (jeremyevans)

* Include SCRIPT_NAME when logging in common logger plugin (jeremyevans)

* Handle invalid POST data when using the exception_page plugin (jeremyevans)

= 3.28.0 (2020-01-15)

* Add session_created_at and session_updated_at methods to the sessions plugin (jeremyevans)

* Make upgrading from rack session cookie in sessions plugin work with rack 2.0.8 (jeremyevans)

* Make json_parser parse request body as json even if request body has already been read (jeremyevans)

= 3.27.0 (2019-12-13)

* Allow json_parser return correct result for invalid JSON if the params_capturing plugin is used (jeremyevans) (#180)

* Add multibyte_string_matcher plugin for matching multibyte characters (jeremyevans)
